--- a/styles/style.css
+++ b/styles/style.css
@@ -48,29 +48,20 @@ ol {
   white-space: nowrap;
 }
 
-/*---------pre-loaders---------*/
-
-.result__video-container {
-  position: relative;
-}
-
-.content__list {
-  position: relative;
-}
-
 /*---------content---------*/
 
 .content {
   display: flex;
   align-items: end;
   gap: 30px;
-  max-width: 1140px;
+  inline-size: 1140px;
   margin: auto;
 }
 
 /*---------video---------*/
 
 .result__video-container {
+  position: relative;
   width: 711px;
   height: 386px;
   margin-bottom: 16px;
@@ -80,17 +71,17 @@ ol {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 
 /*---------heading---------*/
 
 .title {
-  font-family: Oswald;
+  font-family: Oswald, Arial, Helvetica, sans-serif;
   font-size: 75px;
   font-weight: 700;
-  line-height: 94%;
+  line-height: 0.94;
   text-transform: uppercase;
-  margin-bottom: 26px;
 }
 
 .content__accent {
@@ -100,6 +91,9 @@ ol {
 /*---------content_list---------*/
 
 .content__details {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
   width: 100%;
   height: 100%;
 }
@@ -107,12 +101,6 @@ ol {
 .content__list {
   height: 298px;
   overflow: auto;
-  -ms-overflow-style: none;
-}
-
-.content__list::-webkit-scrollbar {
-  width: 0;
-  height: 0;
 }
 
 .content__list-item {
@@ -130,6 +118,8 @@ ol {
 }
 
 .content__video-card-thumbnail {
+  object-fit: cover;
+  object-position: center;
   width: 100%;
   height: 103px;
 }
@@ -150,15 +140,15 @@ ol {
 }
 
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: Oswald, Arial, Helvetica, sans-serif;
   font-size: 30px;
   font-weight: 700;
-  line-height: 100%;
+  line-height: 1;
   text-transform: uppercase;
 }
 
 .content__video-card-description {
-  line-height: 90%;
+  line-height: 0.9;
 }
 
 /*---------stylization_content_list---------*/
@@ -175,6 +165,10 @@ ol {
   text-decoration: underline;
 }
 
+.content__card-link:active {
+  background-color: #545050;
+}
+
 .content__card-link_current {
   background-color: #545050;
 }
@@ -189,15 +183,13 @@ ol {
 .search-form__fieldset-title {
   font-size: 18px;
   font-weight: 400;
-  margin-bottom: 5px;
 }
 
 .search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
   border: none;
-}
-
-.search-form__checkbox-list {
-  width: fit-content;
 }
 
 /*---------textfield---------*/
@@ -212,19 +204,14 @@ ol {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
   background: transparent;
-  color: rgba(255, 255, 255, 0.7);
   font-family: inherit;
   font-size: inherit;
   color: inherit;
+  appearance: none;
 }
 
 .search-form__textfield:focus {
   outline: none;
-}
-
-.search-form__label:has(.search-form__textfield:focus-visible) {
-  outline: 1px solid #fff;
-  outline-offset: 2px;
 }
 
 .search-form__textfield:active {
@@ -232,7 +219,8 @@ ol {
 }
 
 .search-form__textfield::placeholder {
-  font-family: Fira Sans Condensed;
+  color: rgba(255, 255, 255, 0.7);
+  font-family: 'Fira Sans Condensed', Arial, Helvetica, sans-serif;
   font-size: 18px;
 }
 
@@ -242,6 +230,7 @@ ol {
   display: flex;
   align-items: center;
   gap: 15px;
+  width: fit-content;
 }
 
 .search-form__pseudo-checkbox {
@@ -262,7 +251,10 @@ ol {
   background-color: #fff;
 }
 
-.search-form__label:has(.search-form__checkbox:focus-visible) {
+.search-form__label:has(
+    .search-form__checkbox:focus-visible,
+    .search-form__textfield:focus-visible
+  ) {
   outline: 1px solid #fff;
   outline-offset: 2px;
 }
@@ -277,8 +269,7 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', Arial, Helvetica, sans-serif;
   color: #fff;
   text-align: center;
   font-size: 18px;
@@ -286,7 +277,8 @@ ol {
   cursor: pointer;
   background: transparent;
   border: 1px solid #fff;
-  flex-shrink: 0;
+  appearance: none;
+  height: 34px;
 }
 
 .button:focus {
@@ -308,11 +300,9 @@ ol {
 
 .search-form__submit-button {
   width: 194px;
-  height: 34px;
-  margin-top: 20px;
+  align-self: flex-end;
 }
 
 .more-button {
   width: 399px;
-  height: 34px;
 }
