--- a/styles/style.css
+++ b/styles/style.css
@@ -62,14 +62,14 @@ ol {
 
 .result__video-container {
   position: relative;
-  width: 711px;
-  height: 386px;
-  margin-bottom: 16px;
+  inline-size: 711px;
+  block-size: 386px;
+  margin-block-end: 16px;
 }
 
 .result__video {
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -94,21 +94,22 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 26px;
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
 }
 
 .content__list {
-  height: 298px;
+  position: relative;
+  block-size: 298px;
   overflow: auto;
 }
 
 .content__list-item {
-  margin-bottom: 30px;
+  margin-block-end: 30px;
 }
 
 .content__list-item:last-child {
-  margin-bottom: 0;
+  margin-block-end: 0;
 }
 
 .content__video-card {
@@ -120,16 +121,16 @@ ol {
 .content__video-card-thumbnail {
   object-fit: cover;
   object-position: center;
-  width: 100%;
-  height: 103px;
+  inline-size: 100%;
+  block-size: 103px;
 }
 
 .content__video-card-description-container {
   display: flex;
   flex-direction: column;
   gap: 6px;
-  width: 100%;
-  height: 103px;
+  inline-size: 100%;
+  block-size: 103px;
 }
 
 .content__card-link {
@@ -198,11 +199,11 @@ ol {
   display: flex;
   align-items: center;
   gap: 10px;
-  width: 225px;
-  height: 27px;
+  inline-size: 225px;
+  block-size: 27px;
   border: none;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-block-start: 1px solid #fff;
+  border-block-end: 1px solid #fff;
   background: transparent;
   font-family: inherit;
   font-size: inherit;
@@ -230,23 +231,23 @@ ol {
   display: flex;
   align-items: center;
   gap: 15px;
-  width: fit-content;
+  inline-size: fit-content;
 }
 
 .search-form__pseudo-checkbox {
   display: inline-block;
   vertical-align: middle;
   cursor: pointer;
-  width: 19px;
-  height: 19px;
+  inline-size: 19px;
+  block-size: 19px;
   border: 1px solid #fff;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::before {
   display: block;
   content: '';
-  width: 15px;
-  height: 15px;
+  inline-size: 15px;
+  block-size: 15px;
   margin: 1px;
   background-color: #fff;
 }
@@ -278,7 +279,7 @@ ol {
   background: transparent;
   border: 1px solid #fff;
   appearance: none;
-  height: 34px;
+  block-size: 34px;
 }
 
 .button:focus {
@@ -299,10 +300,10 @@ ol {
 }
 
 .search-form__submit-button {
-  width: 194px;
+  inline-size: 194px;
   align-self: flex-end;
 }
 
 .more-button {
-  width: 399px;
+  inline-size: 399px;
 }
